--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.data.mongodb.database=plantspecies
 spring.resources.add-mappings=true
 spring.thymeleaf.cache=false
 spring.thymeleaf.mode=LEGACYHTML5
+
+spring.security.user.name=surya
+spring.security.user.password=1
