successful login, still need to handle session

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=plantspecies
+server.port=8082
 
 
 spring.resources.add-mappings=true
