--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,12 @@
 	    	<artifactId>commons-lang</artifactId>
 	    	<version>2.6</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.openpnp/opencv -->
+	<dependency>
+    	<groupId>org.openpnp</groupId>
+    	<artifactId>opencv</artifactId>
+    	<version>3.2.0-0</version>
+	</dependency>
 		
 	</dependencies>
 
