--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,10 @@
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=plantspecies
-server.port=8082
+
+
+spring.data.mongodb.uri=mongodb+srv://shankar:KEhF3KKqR65M0fry@reconition-pvxc7.mongodb.net/test?retryWrites=true
+
 
 
 spring.resources.add-mappings=true
 spring.thymeleaf.cache=false
 spring.thymeleaf.mode=LEGACYHTML5
 
-spring.security.user.name=surya
-spring.security.user.password=1
